--- a/pages/home.html
+++ b/pages/home.html
@@ -1,32 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../css/output.css">
 </head>
-<body>
 
-   <nav class="px-6 py-7 bg-white flex justify-between items-center">
+<body font-family="montserrat">
 
-    <div>
-        <a href="home.html" class="font-medium text-5xl text-[#cc9900]">Classic</a>
+    <nav class="px-6 py-7 bg-white flex justify-between items-center">
+
+        <div>
+            <a href="home.html" class="font-medium text-5xl text-[#cc9900]">Classic</a>
+        </div>
+
+        <div>
+            <ul class="flex justify-between items-center space-x-10">
+                <li><a href="home.html"
+                        class="p-5 rounded-2xl text-lg font-medium text-black-500 hover:text-white hover:bg-[#cc9900] duration-75">Home</a>
+                </li>
+                <li><a href="about.html"
+                        class="p-5 rounded-2xl  text-lg font-medium text-black-500 hover:text-white hover:bg-[#cc9900] duration-75 ">About</a>
+                </li>
+                <li><a href="services.html"
+                        class="p-5 rounded-2xl  text-lg font-medium text-black-500 hover:text-white hover:bg-[#cc9900] duration-75 ">Blog</a>
+                </li>
+                <li><a href="contact.html"
+                        class="p-5 rounded-2xl  text-lg font-medium text-black-500 hover:text-white hover:bg-[#cc9900] duration-75 ">Contact</a>
+                </li>
+            </ul>
+        </div>
+ 
+    </nav>
+
+    <div class="hero-img" >
+        <img src="https://templatemo.com/templates/templatemo_488_classic/img/tm-home-img.jpg" alt="">
     </div>
 
-    <div>
-        <ul class="flex justify-between items-center space-x-10">
-            <li><a href="home.html" class="p-3 rounded-full text-lg font-medium text-black-500 hover:text-white hover:bg-[#cc9900]">Home</a></li>
-            <li><a href="about.html" class="p-3 rounded-full  text-lg font-medium text-black-500 hover:text-white hover:bg-[#cc9900]">About</a></li>
-            <li><a href="services.html" class="p-3 rounded-full  text-lg font-medium text-black-500 hover:text-white hover:bg-[#cc9900]">Blog</a></li>
-            <li><a href="contact.html" class="p-3 rounded-full  text-lg font-medium text-black-500 hover:text-white hover:bg-[#cc9900]">Contact</a></li>
-        </ul>
-    </div>
-
-   </nav>
 
 
-  
-    
+
 </body>
+
 </html>
