--- a/pages/home.html
+++ b/pages/home.html
@@ -39,6 +39,44 @@
         <img src="https://templatemo.com/templates/templatemo_488_classic/img/tm-home-img.jpg" alt="">
     </div>
 
+    <div class="h-[100vh] intro flex-col justify-center items-center text-center">
+            <h2 class=" pt-20 pb-8 text-4xl text-[#cc9900] capitalize">introduction</h1>
+            <p class="pb-20">Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Iusto ut quis placeat quo, totam deserunt corporis voluptatibus at odit deleniti optio vero dicta vitae?</p>
+
+            <div class="p-8 text-left cards flex gap-8 justify-around items-center sm:flex-col md:flex-col lg:flex-row xl:flex-row"> 
+
+                <div class="card1 flex flex-col gap-4">
+                    <img src="https://templatemo.com/templates/templatemo_488_classic/img/tm-img-310x180-1.jpg" alt="">
+                    <h3>Card1</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, ipsum. Molestiae ratione quo sunt amet a soluta maiores reiciendis natus!</p>
+                    <button class="bg-[#fbc113f1] p-3 w-36 rounded-[5px] text-white hover:bg-[#cc9900c2] duration-75 delay-75">Read More</button>
+                </div>
+
+                <div class="card2 flex flex-col gap-4">
+                    <img src="https://templatemo.com/templates/templatemo_488_classic/img/tm-img-310x180-2.jpg" alt="">
+                    <h3>Card1</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, ipsum. Molestiae ratione quo sunt amet a soluta maiores reiciendis natus!</p>
+                    <button class="bg-[#fbc113f1] p-3 w-36 rounded-[5px] text-white hover:bg-[#cc9900c2] duration-75 delay-75">Read More</button>
+                </div>
+
+
+                <div class="card3 flex flex-col gap-4">
+                    <img src="https://templatemo.com/templates/templatemo_488_classic/img/tm-img-310x180-3.jpg" alt="">
+                    <h3>Card1</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, ipsum. Molestiae ratione quo sunt amet a soluta maiores reiciendis natus!</p>
+                    <button class="bg-[#fbc113f1] p-3 w-36 rounded-[5px] text-white hover:bg-[#cc9900c2] duration-75 delay-75">Read More</button>
+                </div>
+
+
+                <div class="card4 flex flex-col gap-4">
+                    <img src="https://templatemo.com/templates/templatemo_488_classic/img/tm-img-310x180-4.jpg" alt="">
+                    <h3>Card1</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit, ipsum. Molestiae ratione quo sunt amet a soluta maiores reiciendis natus!</p>
+                    <button class="bg-[#fbc113f1] p-3 w-36 rounded-[5px] text-white hover:bg-[#cc9900c2] duration-75 delay-75">Read More</button>
+                </div>
+            </div>
+    </div>
+
 
 
 
